--- a/app/src/main/res/layout/activity_historic.xml
+++ b/app/src/main/res/layout/activity_historic.xml
@@ -17,10 +17,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <LinearLayout
-        android:id="@+id/frame"
+    <android.support.v7.widget.RecyclerView
+        android:padding="16dp"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView"></LinearLayout>
+        android:layout_below="@+id/textView"
+        android:scrollbars="vertical" />
 </RelativeLayout>
