--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
@@ -39,7 +39,7 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
@@ -59,7 +59,7 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
@@ -79,11 +79,11 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText4"
+        android:id="@+id/editTextLogin"
         android:layout_below="@+id/textViewLogin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -94,16 +94,16 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/password_lbl"
         android:id="@+id/textViewPassword"
-        android:layout_below="@+id/editText4"
+        android:layout_below="@+id/editTextLogin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText5"
+        android:id="@+id/editTextPassword"
         android:layout_below="@+id/textViewPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -114,17 +114,20 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/image_lbl"
         android:id="@+id/textViewPhoto"
-        android:layout_below="@+id/editText5"
+        android:layout_below="@+id/editTextPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageViewPhoto"
         android:layout_below="@+id/textViewPhoto"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/buttonCreate"
+        android:layout_toStartOf="@+id/buttonCreate"
+        android:layout_above="@+id/buttonCreate" />
 
     <Button
         android:layout_width="wrap_content"
